# crewai-comic-generator

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
src/incogen_exp/: comic_gen_models.py  crew.py  helpers.py  main.py
src/incogen_exp/config/: agents.yaml  tasks.yaml
src/incogen_exp/config/story/: agents.yaml  tasks.yaml
src/incogen_exp/config/visual/: agents.yaml  tasks.yaml
