[project]
name = "incogen_exp"
version = "0.1.0"
description = "incogen-exp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
incogen_exp = "incogen_exp.main:run"
run_crew = "incogen_exp.main:run"
train = "incogen_exp.main:train"
replay = "incogen_exp.main:replay"
test = "incogen_exp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
